--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "client",
-  "version": "1.0.0",
+  "name": "@sigodenjs/hsync-client",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "hsync": "bin.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +16,7 @@
     "debug": "^4.1.0",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.6.2",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "yargs": "^12.0.5"
   }
 }
