--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "server",
-  "version": "1.0.0",
+  "name": "@sigodenjs/hsync-server",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "hsyncd": "bin.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +19,7 @@
     "lodash.pick": "^4.4.0",
     "lodash.set": "^4.3.2",
     "lodash.unset": "^4.5.2",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "yargs": "^12.0.5"
   }
 }
