--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,8 +13,8 @@
   "author": "Sigoden Huang <sigoden@gmail.com> (https://sigoden.com/)",
   "license": "MIT",
   "dependencies": {
-    "debug": "^4.1.0",
     "mkdirp": "^0.5.1",
+    "npmlog": "^4.1.2",
     "rimraf": "^2.6.2",
     "socket.io-client": "^2.1.1",
     "yargs": "^12.0.5"
