--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,11 +14,11 @@
   "license": "MIT",
   "dependencies": {
     "chokidar": "^2.0.4",
-    "debug": "^4.1.0",
     "lodash.difference": "^4.5.0",
     "lodash.pick": "^4.4.0",
     "lodash.set": "^4.3.2",
     "lodash.unset": "^4.5.2",
+    "npmlog": "^4.1.2",
     "socket.io": "^2.1.1",
     "yargs": "^12.0.5"
   }
