--- a/packages/client/config.example.json
+++ b/packages/client/config.example.json
@@ -3,16 +3,16 @@
     "host": "localhost",
     "port": 4444,
     "ssl": {
-      "cert": "./tmp/ssl/client.crt",
-      "key": "./tmp/ssl/client.key"
+      "cert": "ssl/client.crt",
+      "key": "ssl/client.key"
     }
   },
   "targets": {
-    "nameA": {
-      "target": "./tmp/disk/a"
+    "diskA": {
+      "target": "/tmp/mydisk/diskA"
     },
-    "nameB": {
-      "target": "./tmp/disk/b"
+    "diskB": {
+      "target": "/tmp/mydisk/diskB"
     }
   }
 }
